# Mlib

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeCommands.cmake  CMakeLists.txt  Dockerfile  Dockerfile.build.emsdk  Dockerfile.emsdk  Findglfw3.cmake  LICENSE  Makefile  README.md  Todo.txt  asd.sh  build.cmd  build.sh  build_bullet3.cmd  build_freealut.ps1  build_openal.ps1  build_openal_and_freealut.ps1  build_openal_soft.ps1  build_openal_soft_and_freealut.ps1  build_recastnavigation.cmd  build_scene_renderer.cmd  build_zlib.cmd  cvorb_match.py  cvsift.py  cvsift_match.py  dgrep_profiles.json  docker-compose.nvidia.yml  find_replace_iname.txt  find_replace_nopathes.txt  generator.hpp  icsort.py  index.html  install_openssl.ps1  netem_clumsy.sh  package_scene_render.cmd  package_scene_renderer.cmd  (+8 more)
Apps/: CMakeLists.txt
Apps/Apply_Normal_Map/: Apply_Normal_Map.cpp  CMakeLists.txt
Apps/Audio_Cross_Fade/: Audio_Cross_Fade.cpp  CMakeLists.txt
Apps/Audio_Loop/: Audio_Loop.cpp  CMakeLists.txt
Apps/Audio_Sequence/: Audio_Sequence.cpp  CMakeLists.txt
Apps/Box_Filter/: Box_Filter.cpp  CMakeLists.txt
Apps/Bullet_Contacts/: Bullet_Contacts.cpp  CMakeLists.txt
Apps/Cgi_Player/: CMakeLists.txt  Cgi_Player.cpp
Apps/Chessboard_Detector/: CMakeLists.txt  Chessboard_Detector.cpp
Apps/Compress_Images/: CMakeLists.txt  Compress_Images.cpp
Apps/Create_Navigation_Mesh/: CMakeLists.txt  Create_Navigation_Mesh.cpp
Apps/Download_Heightmap/: CMakeLists.txt  download_heightmap.cpp
Apps/Enhance_Window_Texture/: CMakeLists.txt  Enhance_Window_Texture.cpp
Apps/Explicit_Mipmaps/: CMakeLists.txt  Explicit_Mipmaps.cpp
Apps/Extrapolate_Alpha_Texture/: CMakeLists.txt  Extrapolate_Alpha_Texture.cpp
Apps/Generate_Color_Mask/: CMakeLists.txt  Generate_Color_Mask.cpp
Apps/Generate_Fountain_Texture/: CMakeLists.txt  Generate_Fountain_Texture.cpp
Apps/Generate_Tree/: CMakeLists.txt  Generate_Tree.cpp
Apps/Glfw_Tearing_Demo/: CMakeLists.txt  Glfw_Tearing_Demo.cpp
Apps/Glfw_Tearing_Demo_Multithreaded/: CMakeLists.txt  Glfw_Tearing_Demo_Multithreaded.cpp
Apps/Glfw_Vulkan_Tearing_Demo/: CMakeLists.txt  Glfw_Vulkan_Tearing_Demo.cpp
Apps/Harris_Corner_Detector/: CMakeLists.txt  Harris_Corner_Detector.cpp
Apps/Highlight_Saddle_Points/: CMakeLists.txt  Highlight_Saddle_Points.cpp
Apps/Homography_Tile_Detector/: CMakeLists.txt  Homography_Tile_Detector.cpp
Apps/Image_Mipmaps/: CMakeLists.txt  Image_Mipmaps.cpp
Apps/Imu_Angles/: CMakeLists.txt  Imu_Angles.cpp
Apps/Intrinsic_Matrix_From_Dimensions/: CMakeLists.txt  Intrinsic_Matrix_From_Dimensions.cpp
Apps/Laplace_Filter/: CMakeLists.txt  Laplace_Filter.cpp
Apps/Load_Kn5/: CMakeLists.txt  Load_Kn5.cpp
Apps/Local_Polynomial_Regression/: CMakeLists.txt  Local_Polynomial_Regression.cpp
Apps/Make_Seamless/: CMakeLists.txt  Make_Seamless.cpp
Apps/Match_Histograms/: CMakeLists.txt  Match_Histograms.cpp
Apps/Motion_Interpolation/: CMakeLists.txt  Motion_Interpolation.cpp
Apps/Normalize_Brightness/: CMakeLists.txt  Normalize_Brightness.cpp
Apps/Plot_Pacejkas_Magic_Formula/: CMakeLists.txt  Plot_Pacejkas_Magic_Formula.cpp
Apps/Print_Dff_Info/: CMakeLists.txt  Print_Dff_Info.cpp
Apps/Print_Gamepad_Buttons/: CMakeLists.txt  Print_Gamepad_Buttons.cpp
Apps/Print_Grs_Info/: CMakeLists.txt  Print_Grs_Info.cpp
Apps/Print_Jpk_Info/: CMakeLists.txt  Print_Jpk_Info.cpp
Apps/Print_Kn5_Info/: CMakeLists.txt  Print_Kn5_Info.cpp
Apps/Print_Pssg_Info/: CMakeLists.txt  Print_Pssg_Info.cpp
Apps/Proc_Bush/: CMakeLists.txt  Proc_Bush.cpp  Proc_Bush2.cpp
Apps/Proc_Bush_Svg/: CMakeLists.txt  Proc_Bush_Svg.cpp
Apps/Proc_Terrain/: CMakeLists.txt  Proc_Terrain.cpp  grf.py
Apps/Proc_Terrain_Perlin/: CMakeLists.txt  Proc_Terrain_Perlin.cpp
Apps/Proc_Tree/: CMakeLists.txt  main.cpp  proctree.cpp  proctree.h
Apps/Quantize_Image/: CMakeLists.txt  Quantize_Image.cpp
Apps/Render_Depth_Map/: CMakeLists.txt  Render_Depth_Map.cpp
Apps/Render_Depth_Map_Bundle/: CMakeLists.txt  Render_Depth_Map_Bundle.cpp
Apps/Render_Height_Map/: CMakeLists.txt  Render_Height_Map.cpp
Apps/Render_Obj_File/: CMakeLists.txt  Render_Obj_File.cpp
Apps/Render_Point_Cloud/: CMakeLists.txt  Render_Point_Cloud.cpp
Apps/Render_Scene_File/: CMakeLists.txt  Render_Scene_File.cpp
Apps/Render_Scene_File_Activity/: CMakeLists.txt  Render_Scene_File_Activity.cpp
Apps/Render_Text/: CMakeLists.txt  text_rendering.cpp
Apps/Render_Texture/: CMakeLists.txt  texture_rendering.cpp
Apps/Repackage_Kn5/: CMakeLists.txt  Repackage_Kn5.cpp
Apps/Rof_Huber_Smoother/: CMakeLists.txt  Rof_Huber_Smoother.cpp
Apps/Rof_Smoother/: CMakeLists.txt  Rof_Smoother.cpp
Apps/Sdl_Tearing_Demo/: CMakeLists.txt  Sdl_Tearing_Demo.cpp
Apps/Sfm_Bokeh/: CMakeLists.txt  Sfm_Bokeh.cpp
Apps/Sfm_Dense/: CMakeLists.txt  Sfm_Dense.cpp
Apps/Sfm_Dense_Mapping/: CMakeLists.txt  Sfm_Dense_Mapping.cpp
Apps/Sfm_Dense_Mapping_G/: CMakeLists.txt  Sfm_Dense_Mapping_G.cpp
Apps/Sfm_Dtam_Pipeline/: CMakeLists.txt  Sfm_Dtam_Pipeline.cpp
Apps/Sfm_Train/: CMakeLists.txt  Sfm_Train.cpp
Apps/Sift_Feature_Detector/: CMakeLists.txt  Sift_Feature_Detector.cpp
Mlib/: Activator_Function.cpp  Activator_Function.hpp  Arg_Parser.hpp  Argument_List.hpp  Assert.hpp  CMakeLists.txt  Cache.hpp  Cached_Hash.hpp  Compare_Vectors.hpp  Deallocation_Token.cpp  Deallocators.cpp  Deallocators.hpp  Debug_Prefix.cpp  Debug_Prefix.hpp  Default_Nan.hpp  Default_Optional.hpp  Default_Uninitialized.hpp  Default_Uninitialized_Element.hpp  Default_Uninitialized_List.hpp  Default_Uninitialized_Vector.hpp  Destruction_Guard.hpp  Env.cpp  Env.hpp  FPath.hpp  Features.hpp  Floating_Point_Exceptions.cpp  Floating_Point_Exceptions.hpp  Fps.cpp  Fps.hpp  Get_Scalar.hpp  Get_With_Default.hpp  Hash.hpp  Hash_Of_Pair.hpp  Ignore_Copy.hpp  Ignore_Except.hpp  Increment_In_Destructor.hpp  Initializer_List_As_Sized_Iterable.hpp  Integral_Cast.hpp  Iterable.hpp  Json.cpp  (+63 more)
Tests/: CMakeLists.txt
cpp-httplib/: CMakeLists.txt  httplib.cpp  httplib.h
nv_dds/: CMakeLists.txt  nv_dds.cpp  nv_dds.h  nv_dds.hpp
(+5645 files in other folders)
