cmake_minimum_required(VERSION 3.22.1)

project(Mlib C CXX)

enable_testing()
include(CMakeCommands.cmake)
print_environment()
warn_all()
avoid_floating_point_exceptions()
add_compiler_color()
ddebug()
set_stack_size()
if ((NOT ANDROID) AND (NOT EMSCRIPTEN))
    enable_omp()
endif()
enable_parallel_build()
if (ANDROID)
    enable_cross_compiling()
endif()
set_ehsc()
avoid_floating_point_exceptions()
enable_absolute_diagnostic_pathes()
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_POSITION_INDEPENDENT_CODE TRUE)

###############
# Add options #
###############

option(BUILD_TRIANGLE "Build the Triangle library" OFF)
option(BUILD_CORK "Build the Cork Boolean/CSG library" OFF)
option(BUILD_SCENE "Build the scene library" ON)
if ((NOT EMSCRIPTEN) AND (NOT ANDROID))
    option(WITH_OPENSSL "Build against OpenSSL" ON)
else()
    option(WITH_OPENSSL "Build against OpenSSL" OFF)
endif()
option(WITH_ZLIB "Build aganst zlib" ON)
option(WITH_LAME "Build aganst LAME" OFF)
if ((NOT EMSCRIPTEN) AND (NOT ANDROID))
    option(WITH_ICU "Build aganst ICU" ON)
else()
    option(WITH_ICU "Build aganst ICU" OFF)
endif()

####################
# Add dependencies #
####################

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")

# Replaced with MSYS2 package
# if (MINGW)
#     cmake_policy(SET CMP0074 NEW)
#     set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR})
#     set(glfw3_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/glfw)
# endif()

if (MSVC)
    set(glfw3_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/glfw_vc2022/lib/glfw3dll.lib)
    set(glfw3_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glfw_vc2022/include)
    set(glfw3_FOUND true)
else()
    if ((NOT EMSCRIPTEN) AND (NOT ANDROID))
        find_package(glfw3)
    else()
        set(glfw3_FOUND false)
    endif()
endif()

set(MlibCereal_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cereal/include)
set(MlibCereal_FOUND true)

if (MSVC)
    # Alternative OpenAL-implementation: openal.org
    # find_package(OpenAL REQUIRED)
    set(OPENAL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/openal-soft/include/AL)
    set(OPENAL_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/openal-soft/build/Release/OpenAL32.lib)
    set(OPENAL_FOUND true)
    if (WITH_ZLIB)
        set(ZLIB_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/VSZlibBuild/Release/zlib.lib)
        set(ZLIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/zlib)
        find_package(ZLIB REQUIRED)
    endif()
    set(RECAST_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/recastnavigation/Recast/Include)
    set(RecastNavigation_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/VSRecastBuild)
    find_package(RecastNavigation REQUIRED)
elseif(ANDROID)
    set(OPENAL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Android/openal-soft/include)
    set(OPENAL_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/Android/openal-soft/build-${ANDROID_ABI}/libopenal.a)
    set(OPENAL_FOUND true)
    if (WITH_ZLIB)
        set(ZLIB_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/Android/zlib/build-${ANDROID_ABI}/libz.a)
        set(ZLIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Android/zlib)
        find_package(ZLIB REQUIRED)
    endif()
    file(GLOB Boost_CMake_Directory ${CMAKE_SOURCE_DIR}/Android/Boost-for-Android/build/out/${ANDROID_ABI}/lib/cmake/Boost-*.*.*)
    list(APPEND CMAKE_PREFIX_PATH ${Boost_CMake_Directory})
    set(BOOST_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/Android/Boost-for-Android/build/out/${ANDROID_ABI})
    set(RECAST_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Android/recastnavigation/Recast/Include)
    set(RecastNavigation_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/Android/recastnavigation/build-${ANDROID_ABI})
    find_package(RecastNavigation REQUIRED)
else()
    find_package(OpenAL REQUIRED)
    if (WITH_ZLIB)
        if (EMSCRIPTEN)
            set(ZLIB_FOUND TRUE)
            add_compile_options("-sUSE_ZLIB=1")
            add_link_options("-sUSE_ZLIB=1")
        else()
            find_package(ZLIB REQUIRED)
        endif()
    endif()
    set(RECAST_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/recastnavigation/Recast/Include)
    set(RecastNavigation_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/${RECAST_PREFIX}RecastBuild)
    if (EMSCRIPTEN)
        list(APPEND CMAKE_FIND_ROOT_PATH "${RecastNavigation_ROOT}")
    endif()
    find_package(RecastNavigation REQUIRED)
endif()
if (WITH_LAME)
    find_package(LAME REQUIRED)
endif()
find_package(SDL2)
# MlibOpenGL contains glad_gl.cpp and glad_vulkan.cpp
find_package(Vulkan)
find_package(OpenCV OPTIONAL_COMPONENTS features2d)
if (WITH_ICU)
    find_package(ICU REQUIRED COMPONENTS uc i18n)
endif()
if (EMSCRIPTEN)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_BOOST_HEADERS=1")
else()
    # The "system" component was required by Asio, but it is header-only now.
    find_package(Boost CONFIG REQUIRED COMPONENTS regex)
endif()
if (WITH_OPENSSL)
    find_package(OpenSSL REQUIRED)
endif()

###########################
# Add compile definitions #
###########################

if (NOT OPENSSL_FOUND)
    add_compile_definitions(WITHOUT_OPENSSL)
endif()

if (NOT glfw3_FOUND)
    add_compile_definitions(WITHOUT_GLFW3)
endif()

if (NOT BUILD_TRIANGLE)
    add_compile_definitions(WITHOUT_TRIANGLE)
endif()

if (NOT BUILD_CORK)
    add_compile_definitions(WITHOUT_CORK)
endif()

if (NOT OPENAL_FOUND)
    add_compile_definitions(WITHOUT_OPENAL)
endif()

if (NOT ZLIB_FOUND)
    add_compile_definitions(WITHOUT_ZLIB)
endif()

if (NOT LAME_FOUND)
    add_compile_definitions(WITHOUT_LAME)
endif()

if (NOT ICU_FOUND)
    add_compile_definitions(WITHOUT_ICU)
endif()

#####################
# Set ouptut pathes #
#####################

if (NOT ANDROID)
    if (MINGW)
        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)
        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)
    elseif (MSVC)
        # https://stackoverflow.com/questions/33062728/cmake-link-shared-library-on-windows
        set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)
    else()
        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)
    endif()
    set(CMAKE_DEBUG_POSTFIX _d)
endif()
set(Mlib_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

if (MSVC)
    add_compile_definitions(_USE_MATH_DEFINES)
endif()

######################
# Add subdirectories #
######################

add_subdirectory(Apps)
if (BUILD_CORK AND (NOT (MINGW OR MSVC)))
    add_subdirectory(cork)
endif()
add_subdirectory(cpp-httplib)
if ((NOT ANDROID) AND (NOT EMSCRIPTEN))
    add_subdirectory(glad)
endif()
add_subdirectory(half)
add_subdirectory(minimp3)
add_subdirectory(nv_dds)
add_subdirectory(poly2tri)
add_subdirectory(proctree)
add_subdirectory(stb)
add_subdirectory(stb_cpp)
if ((NOT ANDROID) AND (NOT EMSCRIPTEN))
    add_subdirectory(Tests)
endif()
if (BUILD_TRIANGLE)
    add_subdirectory(Triangle)
endif()
if (EMSCRIPTEN)
    add_subdirectory(simpleomp)
endif()
add_subdirectory(Mlib)
