add_subdirectory(Box_Filter)
add_subdirectory(Cgi_Player)
add_subdirectory(Chessboard_Detector)
add_subdirectory(Harris_Corner_Detector)
add_subdirectory(Highlight_Saddle_Points)
add_subdirectory(Homography_Tile_Detector)
add_subdirectory(Image_Mipmaps)
add_subdirectory(Imu_Angles)
add_subdirectory(Intrinsic_Matrix_From_Dimensions)
add_subdirectory(Motion_Interpolation)
add_subdirectory(Sfm_Bokeh)
add_subdirectory(Sfm_Dense)
add_subdirectory(Sfm_Dense_Mapping)
add_subdirectory(Sfm_Dense_Mapping_G)
add_subdirectory(Sfm_Dtam_Pipeline)
add_subdirectory(Sfm_Train)
add_subdirectory(Generate_Tree)
add_subdirectory(Proc_Tree)
add_subdirectory(Proc_Bush)

if (glfw3_FOUND)
add_subdirectory(Explicit_Mipmaps)
    add_subdirectory(Glfw_Tearing_Demo)
    if (Vulkan_FOUND AND glm_FOUND)
        add_subdirectory(Glfw_Vulkan_Tearing_Demo)
    endif()
    add_subdirectory(Render_Depth_Map)
    add_subdirectory(Render_Obj_File)
    add_subdirectory(Render_Scene_File)
    add_subdirectory(Render_Text)
    add_subdirectory(Print_Gamepad_Buttons)
    # MlibRender contains glad_gl.cpp and glad_vulkan.cpp
    if (SDL2_FOUND)
        add_subdirectory(Sdl_Tearing_Demo)
    endif()
endif()
