if (BUILD_SCENE AND ANDROID)
    add_subdirectory(Render_Scene_File_Activity)
endif()
if (NOT ANDROID)
    add_subdirectory(Box_Filter)
    add_subdirectory(Compress_Images)
    add_subdirectory(Download_Heightmap)
    add_subdirectory(Enhance_Window_Texture)
    add_subdirectory(Extrapolate_Alpha_Texture)
    add_subdirectory(Generate_Color_Mask)
    add_subdirectory(Generate_Fountain_Texture)
    add_subdirectory(Generate_Tree)
    add_subdirectory(Image_Mipmaps)
    add_subdirectory(Imu_Angles)
    add_subdirectory(Laplace_Filter)
    add_subdirectory(Local_Polynomial_Regression)
    add_subdirectory(Make_Seamless)
    add_subdirectory(Match_Histograms)
    add_subdirectory(Normalize_Brightness)
    add_subdirectory(Plot_Pacejkas_Magic_Formula)
    add_subdirectory(Print_Dff_Info)
    add_subdirectory(Print_Grs_Info)
    add_subdirectory(Print_Kn5_Info)
    if (ZLIB_FOUND)
        add_subdirectory(Print_Pssg_Info)
    endif()
    add_subdirectory(Print_Jpk_Info)
    add_subdirectory(Proc_Bush)
    add_subdirectory(Proc_Bush_Svg)
    add_subdirectory(Proc_Terrain)
    add_subdirectory(Proc_Terrain_Perlin)
    add_subdirectory(Proc_Tree)
    add_subdirectory(Quantize_Image)
    add_subdirectory(Repackage_Kn5)
    add_subdirectory(Structure_Image)
    add_subdirectory(Tile_Image)

    if (OPENAL_FOUND)
        add_subdirectory(Audio_Cross_Fade)
        add_subdirectory(Audio_Loop)
        add_subdirectory(Audio_Sequence)
    endif()
    if (glfw3_FOUND)
        add_subdirectory(Apply_Normal_Map)
        add_subdirectory(Explicit_Mipmaps)
        add_subdirectory(Glfw_Tearing_Demo)
        add_subdirectory(Glfw_Tearing_Demo_Multithreaded)
        if (Vulkan_FOUND AND glm_FOUND)
            add_subdirectory(Glfw_Vulkan_Tearing_Demo)
        endif()
        add_subdirectory(Render_Height_Map)
        add_subdirectory(Render_Text)
        add_subdirectory(Render_Texture)
        add_subdirectory(Print_Gamepad_Buttons)
        # MlibOpenGL contains glad_gl.cpp and glad_vulkan.cpp
        if (SDL2_FOUND)
            add_subdirectory(Sdl_Tearing_Demo)
        endif()
    endif()
    if (BUILD_SCENE)
        add_subdirectory(Create_Navigation_Mesh)
        if (glfw3_FOUND)
            add_subdirectory(Render_Obj_File)
            add_subdirectory(Render_Scene_File)
        endif()
    endif()
endif()
