include(../CMakeCommands.cmake)

set(mlib_excluded_files "")
my_add_shared_library(Mlib "0" "" "${mlib_excluded_files}")
include_directories(${Mlib_INCLUDE_DIR})
target_link_libraries(Mlib MlibStrings)

if (OPENAL_FOUND AND ALUT_FOUND)
    add_subdirectory(Audio)
endif()
if (BUILD_CV)
    add_subdirectory(Cv)
endif()
add_subdirectory(Fps)
add_subdirectory(Geometry)
add_subdirectory(Images)
add_subdirectory(Math)
add_subdirectory(Physics)
add_subdirectory(Players)
add_subdirectory(Scene_Graph)
if (BUILD_SFM)
    add_subdirectory(Sfm)
endif()
add_subdirectory(Strings)
if (glfw3_FOUND)
    add_subdirectory(Render)
endif()
if (glfw3_FOUND)
    add_subdirectory(Scene)
endif()
add_subdirectory(Threads)
