include(../CMakeCommands.cmake)

set(mlib_excluded_files "")
my_add_library(Mlib "0" "" "${mlib_excluded_files}")
target_include_directories(Mlib PUBLIC ${Mlib_INCLUDE_DIR})
target_link_libraries(Mlib MlibStrings)

add_subdirectory(Array)
add_subdirectory(Components)
# add_subdirectory(Float128)
add_subdirectory(Geography)
add_subdirectory(Geometry)
add_subdirectory(Images)
add_subdirectory(Io)
add_subdirectory(Json)
add_subdirectory(Layout)
add_subdirectory(Macro_Executor)
add_subdirectory(Math)
add_subdirectory(Memory)
add_subdirectory(Os)
add_subdirectory(Regex)
add_subdirectory(Remote)
add_subdirectory(Stats)
add_subdirectory(Threads)
add_subdirectory(Time)
if (OPENAL_FOUND AND ALUT_FOUND)
    add_subdirectory(Audio)
endif()
if (BUILD_CV)
    add_subdirectory(Cv)
endif()
if (BUILD_SFM)
    add_subdirectory(Sfm)
endif()
add_subdirectory(Strings)
if (glfw3_FOUND OR ANDROID)
    add_subdirectory(Render)
    add_subdirectory(Osm_Loader)
endif()
if (BUILD_SCENE)
    add_subdirectory(Scene_Graph)
    add_subdirectory(Physics)
    add_subdirectory(Players)
    add_subdirectory(Navigation)
    if (glfw3_FOUND OR ANDROID)
        add_subdirectory(Scene)
    endif()
endif()
if (ANDROID)
    add_subdirectory(Android)
endif()
