include(../CMakeCommands.cmake)

if (ANDROID OR EMSCRIPTEN)
    add_subdirectory(AGameHelper)
endif()
add_subdirectory(Array)
add_subdirectory(Audio)
add_subdirectory(Components)
add_subdirectory(Compression)
add_subdirectory(Geography)
add_subdirectory(Geometry)
add_subdirectory(Images)
add_subdirectory(Io)
add_subdirectory(Json)
add_subdirectory(Layout)
add_subdirectory(Math)
add_subdirectory(Macro_Executor)
add_subdirectory(Memory)
add_subdirectory(Misc)
add_subdirectory(Navigation)
add_subdirectory(OpenGL)
add_subdirectory(Os)
add_subdirectory(Osm_Loader)
add_subdirectory(Physics)
add_subdirectory(Players)
add_subdirectory(Regex)
add_subdirectory(Remote)
add_subdirectory(Scene)
add_subdirectory(Scene_Graph)
add_subdirectory(Stats)
add_subdirectory(Strings)
add_subdirectory(Threads)
add_subdirectory(Time)
