add_subdirectory(Array)
add_subdirectory(Bmp)
add_subdirectory(Box_Filter)
add_subdirectory(Chessboard_Detector)
add_subdirectory(Cv)
add_subdirectory(Dense_Mapping)
add_subdirectory(Floating_Point_Exceptions)
add_subdirectory(Geometry)
add_subdirectory(Homography_From_Images)
add_subdirectory(Images)
add_subdirectory(Math)
add_subdirectory(Misc)
add_subdirectory(Naive_Bayes_Regression)
add_subdirectory(Ols)
add_subdirectory(Optical_Flow)
add_subdirectory(Registration)
if (glfw3_FOUND)
    add_subdirectory(Render)
endif()
add_subdirectory(Rigid_Body_Physics)
add_subdirectory(Rigid_Motion_From_Images)
add_subdirectory(Physics)
add_subdirectory(SaddleDetector)
add_subdirectory(Scene)
add_subdirectory(Schur_Complement_Test)
add_subdirectory(Schur_Complement_Test2)
add_subdirectory(Sfm)
add_subdirectory(Sparse_Reconstruction)
add_subdirectory(Stats)
