add_subdirectory(Array)
add_subdirectory(Bmp)
add_subdirectory(Box_Filter)
add_subdirectory(Floating_Point_Exceptions)
add_subdirectory(Geography)
add_subdirectory(Geometry)
add_subdirectory(Images)
add_subdirectory(Macro_Executor)
add_subdirectory(Math)
add_subdirectory(Misc)
add_subdirectory(Naive_Bayes_Regression)
add_subdirectory(Ols)
add_subdirectory(Optical_Flow)
add_subdirectory(Registration)
# add_subdirectory(Rigid_Body_Physics)
add_subdirectory(Dff)
add_subdirectory(Physics)
add_subdirectory(SaddleDetector)
add_subdirectory(Signal)
add_subdirectory(Stats)

if (BUILD_CV)
    add_subdirectory(Cv)
endif()
if (BUILD_SFM)
    add_subdirectory(Chessboard_Detector)
    add_subdirectory(Dense_Mapping)
    add_subdirectory(Rigid_Motion_From_Images)
    add_subdirectory(Rotation_From_Images)
    add_subdirectory(Schur_Complement_Test)
    add_subdirectory(Schur_Complement_Test2)
    add_subdirectory(Sfm)
    add_subdirectory(Sparse_Reconstruction)
endif()
if (glfw3_FOUND)
    add_subdirectory(Scene)
endif()
if (BUILD_CV AND (glfw3_FOUND OR ANDROID))
    add_subdirectory(Render)
endif()
