add_subdirectory(Array)
add_subdirectory(Bmp)
add_subdirectory(Box_Filter)
add_subdirectory(Cfd)
add_subdirectory(Floating_Point_Exceptions)
add_subdirectory(Geography)
add_subdirectory(Geometry)
add_subdirectory(Images)
add_subdirectory(Macro_Executor)
add_subdirectory(Math)
add_subdirectory(Misc)
add_subdirectory(Ols)
add_subdirectory(Remote)
# add_subdirectory(Rigid_Body_Physics)
add_subdirectory(Dff)
add_subdirectory(Physics)
add_subdirectory(Signal)
add_subdirectory(Stats)

if (glfw3_FOUND)
    add_subdirectory(Scene)
endif()
